--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                             <li>Active</li>
                                             <li>Movie</li>
                                         </ul>
-                                        <h5><a href="#">The Seven Deadly Sins: Wrath of the Gods</a></h5>
+                                        <h5><a href="#">센과 치히로의 행방불명</a></h5>
                                     </div>
                                 </div>
                             </div>
